--- a/app/common/dynamic-form/item/help/help.html
+++ b/app/common/dynamic-form/item/help/help.html
@@ -1,7 +1,7 @@
-<small [attr.id]="item.key+'Help'" *ngIf="item.help" class="form-text text-muted">{{item.help}}</small>
+<small [attr.id]="config.key+'Help'" *ngIf="config.help" class="form-text text-muted">{{config.help}}</small>
 
 
-<div class="errorMessage" *ngIf="!isValid">{{item.label}} is required</div>
+<div class="errorMessage" *ngIf="!isValid">{{config.label}} is required</div>
 
 
-<label [attr.for]="item.key">{{item.label}}</label>
+<label [attr.for]="config.key">{{config.label}}</label>
